# postefinances_stock

./: GUIDE_DEPLOIEMENT.md  LICENSE  README.md  deployment_guide.md  docker-compose.yml  pyproject.toml  stock.xlsx  users.xlsx  ~$users.xlsx
.gemini/: state_snapshot.xml
backend/: .env.prod  Dockerfile  README.md  batch_create_users.py  entrypoint.sh  main.py  pyproject.toml  reinitialize_stock_from_excel.py  seed.py  update_stock_script.py
backend/app/: config.py  database.py  websockets.py
backend/app/api/: auth.py  schemas.py
backend/app/api/routes/: auth.py  category.py  dashboard.py  inventory_audit.py  notifications.py  product.py  purchase_order.py  reports.py  request.py  stock_adjustment.py  user.py  websockets.py
backend/app/crud/: inventory_audit.py  notifications.py  purchase_order.py  reports.py  request.py  stock_adjustment.py
backend/app/services/: notification_service.py  pdf_service.py  purchase_order_service.py  reports.py  request_service.py
backend/app/templates/pdf/: delivery_note.html  purchase_order.html
backend/app/utils/: number_generator.py
backend/database/: schema.prisma
backend/database/migrations/20251115184237_add_purchase_order_models/: migration.sql
backend/database/migrations/20251117200903_remove_proposal_step/: migration.sql
backend/database/migrations/20251117202316_add_cancelled_status/: migration.sql
backend/database/migrations/20251117205055_add_reception_dispute_status/: migration.sql
backend/tests/: test_crud_purchase_order.py  test_number_generator.py  test_purchase_order_routes.py  test_request_routes.py
(+101 files in other folders)
