[project]
name = "postefinances_stock_app_V1"
version = "0.1.1"
description = "Gestion de stock"
authors = [
    {name = "falang221", email = "ndiayebuziness@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
