[project]
name = "stock"
version = "0.1.0"
description = "Gestion de stock"
authors = [
    {name = "Abdourahmane NDIAYE", email = "a.ndiaye2012@gmail.com"},
]
dependencies = ["fastapi", "uvicorn[standard]", "prisma", "websockets>=12.0","python-dotenv", "python-jose", "PyJWT", "python-multipart", "passlib", "bcrypt<4", "weasyprint", "gunicorn", "sentry-sdk[fastapi]>=2.47.0", "pydantic-settings>=2.12.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
seed = "python seed.py"
dev = "uvicorn main:app --reload"
start = "uvicorn main:app"
"test:cov" = "pytest --cov=app --cov-report=html --cov-report=term"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = ["prisma/generated"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "black>=25.11.0",
    "pytest>=9.0.1",
    "pytest-cov>=5.0.0",
]

[tool.prisma]
schema = "database/schema.prisma"
